<resources>
    <string name="app_name">ProjOne</string>
    <string name="edit_message">Enter a message</string>
    <string name="btn_marker">Markers</string>
    <string name="btn_heatmap">HeatMap</string>
    <string name="btn_find">Find</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_heat_map">Charger HeatMap</string>
    <string name="title_activity_landing_screen">LandingScreen</string>
    <string name="title_activity_landing_page">Find My Charger</string>
    <string name="ev_image_description">EV Image</string>
    <string name="find_ev_charger">Find My Charger</string>
    <string name="no_charger_error">No Chargers found.Try a different search</string>
    <string name="ok">OK</string>
    <string name="dialog_message">Change the search criteria to find your charger</string>
    <string name="dialog_title">Charger not found</string>


    <string-array name="radius_values">
        <item>Taylor</item>
        <item>Dearborn</item>
        <item>All</item>
    </string-array>
    <string-array name="distance_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>All</item>
    </string-array>

    <string-array name="search_options">
        <item>City</item>
        <item>Distance</item>
    </string-array>


    <string name="city_list">Select City</string>
</resources>
